# document_triage

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  api.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_endpoints.py
scripts/: run_baseline.py  run_llm_agent.py
server/: __init__.py  app.py  document_triage_environment.py  models.py
src/: __init__.py  environment.py  rubrics.py
tasks/: tasks.json
tests/: test_environment.py  test_quick.py
