[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "document-triage-env"
version = "1.0.0"
description = "A Gymnasium-based RL environment for AI document triage and routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "httpx>=0.25.0"]
llm = ["google-generativeai>=0.8.0"]
all = ["document-triage-env[dev,llm]"]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
